# ArkZero

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  HIGH_PERFORMANCE_ROADMAP.md  HYPIUM_NAMING_FIX.md  README.en.md  README.md  REFACTORING_REPORT.md  TESTING_GUIDE.md  TEST_CREATION_REPORT.md  TEST_RUN_REPORT.md  UNIT_TEST_DESIGN.md  build-profile.json5  hvigorw.bat  oh-package.json5  run_instrument_test.ps1  zero-copy-display-api-simplified.md
AppScope/: app.json5
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/.test/default/cache/default/default@UnitTestArkTS/esmodule/: .ts_checker_cache  .tsbuildinfo  .tsbuildinfo.linter
entry/.test/default/intermediates/loader/default/: loader.json
entry/.test/default/intermediates/merge_profile/default/: module.json
entry/.test/default/intermediates/ohosTest/: etsCoverageData.json  init_coverage.json
entry/.test/default/intermediates/ohosTest/coverage_data/: js_coverage.json  test_result.txt
entry/.test/default/intermediates/res/default/: ResourceTable.txt  ark_module.json  module.json  resConfig.json  resources.index
entry/.test/default/intermediates/test/: etsCoverageData.json  init_coverage.json
entry/.test/default/intermediates/test/coverage_data/: test_result.txt
entry/.test/default/outputs/ohosTest/reports/: coverageReport.json  index.html
entry/.test/default/outputs/test/reports/: EntryAbility.ets.html  coverageReport.json  index.html
entry/.test/testability/: TestAbility.ets  phoneSettingConfig_Phone.json
entry/.test/testability/pages/: Index.ets
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  test_performance.cpp
entry/src/main/cpp/common/: common.h
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/renderer/api/: RendererApi.cpp  RendererApi.h
entry/src/main/cpp/renderer/backend/: EGLContextManager.cpp  EGLContextManager.h  GLESBackend.cpp  GLESBackend.h  IRenderBackend.h  PixelFormatConverter.cpp  PixelFormatConverter.h  TextureManager.cpp  TextureManager.h  TexturePool.cpp  TexturePool.h  YUVShaderManager.cpp  YUVShaderManager.h
entry/src/main/cpp/renderer/core/: PerformanceMonitor.cpp  PerformanceMonitor.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h
entry/src/main/cpp/renderer/manager/: BackendFactory.cpp  BackendFactory.h  RendererManager.cpp  RendererManager.h  SurfaceManager.cpp  SurfaceManager.h
entry/src/main/cpp/tests/: README.md  egl_context_manager_napi.cpp  egl_context_manager_napi.h  gles_backend_napi.cpp  gles_backend_napi.h  performance_monitor_napi.cpp  performance_monitor_napi.h  pixel_format_converter_napi.cpp  pixel_format_converter_napi.h  render_queue_napi.cpp  render_queue_napi.h  renderer_manager_napi.cpp  renderer_manager_napi.h  renderer_napi.cpp  renderer_napi.h  surface_manager_napi.cpp  surface_manager_napi.h  test_performance.cpp  texture_manager_napi.cpp  texture_manager_napi.h  texture_pool_napi.cpp  texture_pool_napi.h  yuv_shader_manager_napi.cpp  yuv_shader_manager_napi.h
entry/src/main/cpp/types/: native_screen_renderer.d.ts
entry/src/main/cpp/types/libnativerender/: oh-package.json5
entry/src/main/ets/common/: CommonConstant.ets
entry/src/main/ets/components/rendering/: ArkZeroRenderer.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/interface/: XComponentContext.ets
entry/src/main/ets/pages/: Index.ets  SurfaceDemoPage.ets
entry/src/main/ets/types/: nativerender.d.ts
entry/src/main/ets/view/: OpenGLView.ets  YUVView.ets
entry/src/main/resources/base/element/: color.json  float.json  string.json
entry/src/main/resources/base/media/: ic_picture.yuv
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
entry/src/ohosTest/: module.json5
entry/src/ohosTest/ets/test/: List.test.ets
entry/src/ohosTest/ets/test/arkts/: ArkZeroRenderer.test.ets  ArkZeroRendererConfig.test.ets  PixelFormat.test.ets
entry/src/ohosTest/ets/test/integration/: List.integration.test.ets
entry/src/ohosTest/ets/test/native/: EGLContextManager.test.ets  GLESBackend.test.ets  PerformanceMonitor.test.ets  PixelFormatConverter.test.ets  RenderQueue.test.ets  Renderer.test.ets  RendererManager.test.ets  SurfaceManager.test.ets  TextureManager.test.ets  TexturePool.test.ets  YUVShaderManager.test.ets
entry/src/ohosTest/ets/testability/: IntegrationTestAbility.ets  TestAbility.ets
entry/src/ohosTest/ets/testability/pages/: Index.ets  IntegrationTestPage.ets
entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ets
entry/src/ohosTest/resources/base/element/: string.json
entry/src/ohosTest/resources/base/profile/: test_pages.json
entry/src/test/: List.test.ets
(+74 files in other folders)
